# ChessHarness

./: .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  tournament_main.py  web_main.py
.claude/: settings.local.json
.github/workflows/: tests.yml
chessharness/: __init__.py  auth_store.py  board.py  config.py  conv_logger.py  events.py  game.py  renderer.py
chessharness/cli/: display.py  selector.py  tournament_display.py  tournament_selector.py
chessharness/players/: __init__.py  base.py  engine.py  human.py  llm.py
chessharness/providers/: __init__.py  anthropic.py  base.py  google.py  openai.py  openai_chatgpt.py
chessharness/tournaments/: __init__.py  arena.py  base.py  events.py  knockout.py  round_robin.py  swiss.py
chessharness/web/: app.py
docs/: context-handling.md  copilot-chat-auth-flow.md  provider-auth-architecture.md  subscription-auth-plan.md  tournaments-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Board.jsx  GameView.jsx  Layout.jsx  ModelDropdown.jsx  ModelPicker.jsx  MoveHistory.jsx  NavBar.jsx  PlayerPanel.jsx  ReasoningPanel.jsx
frontend/src/context/: AppContext.jsx
scripts/: discover_copilot_chat_models.py  discover_openai_chatgpt_models.py
tests/: test_annotated_pgn.py  test_auth_store.py  test_knockout_tournament.py  test_llm_player.py  test_provider_capabilities.py  test_provider_metadata.py  test_renderer.py  test_tournament_broadcaster.py  test_tournament_serialization.py  test_web_provider_overrides.py
(+11 files in other folders)
